# tomography-ART

./: CMakeLists.txt  README.md
data/ESRF/: sinogram.tif
data/rectangles/: reference_CT.tif  sinogram.tif
data/shepp_logan/: reference_CT.tif  sinogram.tif
include/: Image.h  Image.inl  cmdline.h
src/: Image.cxx  cmdline.cxx  myART.cxx  myART.ggo
